# pyo3-example-gihyo

./: README.md  benchmark.py  example_base.py  pyproject.toml
strcounter/: Cargo.toml  Makefile  pyproject.toml
strcounter/src/: lib.rs
strcounter/strcounter/: __init__.py  strcounter.pyi
