[project]
name = "pyo3-example-gihyo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "TakumiTsuruta", email = "ttsuruta@landscape.co.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "maturin>=1.2.3",
    "pip>=23.2.1",
    "httpx>=0.25.0",
]

[tool.hatch.metadata]
allow-direct-references = true
